--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
-    "mongodb": "^4.9.0"
+    "mongodb": "^4.9.0",
+    "string-strip-html": "^11.3.1"
   }
 }
+
